<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uqcard</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section3">Section 3</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section1">Section 1</string>
    <string name="hand_button">Hand</string>
    <string name="title_activity_full_card">Your card</string>
    <string name="fullScreenCard">fullscreen card</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <string name="UUID">822309e6-f032-4ba4-857f-0f8030907101</string>
    <string name="currentCard">Current card</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="opponentGeneral">Opponent general</string>
    <string name="opponentBack">Opponent back</string>
    <string name="opponentPhenomenon">Opponent phenomenon</string>
    <string name="opponentCemetery">Opponent cemetery</string>
    <string name="opponentFront">Opponent front</string>
    <string name="opponentDeck">Opponent deck</string>
    <string name="playerGeneral">Player general</string>
    <string name="playerBack">Player back</string>
    <string name="playerPhenomenon">Player phenomenon</string>
    <string name="playerCemetery">Player cemetery</string>
    <string name="playerFront">Player front</string>
    <string name="playerDeck">Player deck</string>
    <string name="flavorText">La legende dit que ce robot aime manger des pommes -Steeve Job</string>
    <string name="attack">atk: </string>
    <string name="defence">def: </string>
    <string name="health">vie: </string>
    <string name="cardType">creature: </string>
    <string name="description">description</string>
    <string name="creaType">Android</string>
    <string name="cardName">BugDroid</string>
    <string name="cost">4</string>
    <string name="buttonSingle">Multiplayer 1 vs 1</string>
    <string name="buttonMulti">Multiplayer 3  devices</string>
    <string name="buttonOptions">Options</string>
    <string name="buttonEditor">Deck editor</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_database">DatabaseActivity</string>
    <string name="title_activity_host_choice">HostChoice</string>
    <string name="title_activity_bluetooth_connect">BluetoothConnect</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="general_name">general name</string>
    <string name="general_ability_1_name">1</string>
    <string name="general_ability_2_name">2</string>
    <string name="general_ability_3_name">3</string>
    <string name="general_ability_1_description">player gains 1 renewable ressource</string>
    <string name="general_ability_2_description">target creature gets -1 attack</string>
    <string name="general_ability_3_description">deal x damage to target creature or player, exile x cards</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_tabs">TabsActivity</string>
    <string name="deckList">Decks</string>
    <string name="game">Game</string>
    <string name="cardList">Cards</string>
    <string name="history">History</string>
    <string name="newgame">New game</string>
    <string name="connect">Connect</string>
    <string name="host">Host</string>
    <string name="stats">Stats</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="startgame">Start Game</string>
    <string name="endturn">End turn</string>
    <string name="pos1">1</string>
    <string name="pos2">2</string>
    <string name="pos3">3</string>
    <string name="pos4">4</string>
    <string name="pos5">5</string>
    <string name="pos7">7</string>
    <string name="pos8">8</string>
    <string name="pos9">9</string>
    <string name="pos10">10</string>
    <string name="pos11">11</string>
    <string name="graveyard">graveyard</string>
    <string name="deck">deck</string>

</resources>