<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/general" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/playerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="17dp"
            android:text="@string/general_name"
            android:textSize="22sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="250dp"
        android:layout_height="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:layout_toRightOf="@+id/relativeLayout1"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_3_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="250dp"
        android:layout_height="77dp"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_2_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="250dp"
        android:layout_height="77dp"
        android:layout_above="@+id/relativeLayout2"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="0dp"
        android:layout_marginRight="0dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_1_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="77dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_3_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="77dp"
        android:layout_alignBottom="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_2_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="77dp"
        android:layout_alignBottom="@+id/relativeLayout3"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="0dp"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/opponentTexte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/general_ability_1_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </RelativeLayout>

</RelativeLayout>